<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson10</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="names">Names</string>
    <string name="age">Age</string>
    <string name="save">Save User</string>
    <string name="email">Email</string>
    <string name="view_users">View Users</string>

</resources>